# GeoDjangoPOC

./: .gcloudignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
geodjango/: .gcloudignore
geodjango/geodjango/: api.py  settings.py  urls.py
geodjango/samplelocations/: admin.py  api.py  apps.py  models.py  schemas.py  views.py
geodjango/samplelocations/api/: contacts.py  locations.py  thing.py  wells.py
geodjango/samplelocations/management/commands/: seed_samplelocations.py
geodjango/samplelocations/migrations/: 0001_initial.py  0002_datastream_observation_location_sample_sensor_thing_and_more.py  0003_remove_location_thing_junction_unique_location_thing_and_more.py  0004_sensor_name.py
geodjango/samplelocations/static/css/: style.css
geodjango/samplelocations/templates/samplelocations/: base.html  index.html
geodjango/samplelocations/tests/: __init__.py  test_contact.py  test_contact_owner.py  test_equipment.py  test_geochronology.py  test_group.py  test_lexicon.py  test_location.py  test_mvp.py  test_owner.py  test_samplelocation.py  test_spring.py  test_thing.py  test_well.py  test_wellscreen.py
geodjango/samplelocations/tests/not_tested/: test_collabnet.py  test_geospatial.py  test_geothermal.py
