[project]
name = "geodjangopoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.3",
    "django-ninja>=1.4.3",
    "google-cloud-secret-manager>=2.24.0",
    "django-unfold>=0.61.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "gunicorn>=23.0.0",
    "django-storages>=1.14.6",
    "google-cloud-storage>=3.2.0",
]
